--- a/webroot/themes/coar_ngr/theme.yaml
+++ b/webroot/themes/coar_ngr/theme.yaml
@@ -1,7 +1,7 @@
 # theme.toml template for a Hugo theme
 # See https://github.com/spf13/hugoThemes#themetoml for an example
 
-name: "Dcmi"
+name: "coar_ngr"
 # license: "MIT"
 # licenselink: "https://github.com/yourname/yourtheme/blob/master/LICENSE.md"
 description: ""
@@ -11,8 +11,8 @@ features: []
 # min_version: "0.20"
 
 [author]
-  name: "DCMI Infrastructure Advisory Committee"
-  homepage: "http://www.dublincore.org"
+  name: "Paul Walk"
+  homepage: "http://www.paulwalk.net"
 
 # If porting an existing theme
 # [original]
