fixed link problems

--- a/webroot/config/production/config.yaml
+++ b/webroot/config/production/config.yaml
@@ -1,4 +1,4 @@
-baseurl: "http://ngr.coar-repositories.org"
+baseurl: "https://ngr.coar-repositories.org"
 # googleAnalytics: "UA-37062056-9"
 params:
   showPageStatusTags: false
