--- a/webroot/config/_default/config.yaml
+++ b/webroot/config/_default/config.yaml
@@ -21,13 +21,12 @@ params:
   AuthorName: "Paul Walk"
   pageSize: "10"
 markup:
-  defaultMarkdownHandler: blackFriday
-  # defaultMarkdownHandler: goldmark
+  defaultMarkdownHandler: goldmark
   goldmark:
     extensions:
       definitionList: true
       footnote: true
-      linkify: true
+      linkify: false
       strikethrough: true
       table: true
       taskList: true
@@ -39,20 +38,52 @@ markup:
       hardWraps: false
       unsafe: true
       xHTML: false
-  blackFriday:
-    angledQuotes: false
-    extensions: null
-    extensionsMask: null
-    footnoteAnchorPrefix: ""
-    footnoteReturnLinkContents: ""
-    fractions: true
-    hrefTargetBlank: false
-    latexDashes: true
-    nofollowLinks: false
-    noreferrerLinks: false
-    plainIDAnchors: true
-    skipHTML: false
-    smartDashes: true
-    smartypants: true
-    smartypantsQuotesNBSP: false
-    taskLists: true
+  highlight:
+    anchorLineNos: false
+    codeFences: true
+    guessSyntax: false
+    hl_Lines: ""
+    lineAnchors: ""
+    lineNoStart: 1
+    lineNos: false
+    lineNumbersInTable: true
+    noClasses: true
+    style: pygments
+    tabWidth: 4
+
+#markup:
+#  defaultMarkdownHandler: blackFriday
+#  # defaultMarkdownHandler: goldmark
+#  goldmark:
+#    extensions:
+#      definitionList: true
+#      footnote: true
+#      linkify: true
+#      strikethrough: true
+#      table: true
+#      taskList: true
+#      typographer: false
+#    parser:
+#      attribute: true
+#      autoHeadingID: true
+#    renderer:
+#      hardWraps: false
+#      unsafe: true
+#      xHTML: false
+#  blackFriday:
+#    angledQuotes: false
+#    extensions: null
+#    extensionsMask: null
+#    footnoteAnchorPrefix: ""
+#    footnoteReturnLinkContents: ""
+#    fractions: true
+#    hrefTargetBlank: false
+#    latexDashes: true
+#    nofollowLinks: false
+#    noreferrerLinks: false
+#    plainIDAnchors: true
+#    skipHTML: false
+#    smartDashes: true
+#    smartypants: true
+#    smartypantsQuotesNBSP: false
+#    taskLists: true
